--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.18'
     id 'io.spring.dependency-management' version '1.1.4'
+
+    id 'checkstyle'
 }
 
 group = 'pl.amilosh'
@@ -9,6 +11,11 @@ version = '0.0.1'
 
 java {
     sourceCompatibility = '17'
+    targetCompatibility = '17'
+}
+
+ext {
+    checkstyleToolVersion = '9.3'
 }
 
 repositories {
@@ -18,4 +25,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+}
+
+checkstyle {
+    toolVersion "$checkstyleToolVersion"
+    configFile rootProject.file('config/checkstyle.xml')
 }
