--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ java {
 
 ext {
     checkstyleToolVersion = '9.3'
+    flywayVersion = '8.4.4'
 }
 
 repositories {
@@ -23,8 +24,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    runtimeOnly "org.postgresql:postgresql"
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation "org.flywaydb:flyway-core:$flywayVersion"
 }
 
 checkstyle {
