--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ java {
 ext {
     checkstyleToolVersion = '9.3'
     flywayVersion = '8.4.4'
+    mapStructVersion = '1.4.2.Final'
+    lombokVersion = '1.18.22'
+    lombokMapstructBindingVersion = '0.2.0'
 }
 
 repositories {
@@ -24,13 +27,20 @@ repositories {
 }
 
 dependencies {
+    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
+    annotationProcessor "org.mapstruct:mapstruct-processor:$mapStructVersion"
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-    runtimeOnly "org.postgresql:postgresql"
+    compileOnly "org.projectlombok:lombok:$lombokVersion"
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation "org.flywaydb:flyway-core:$flywayVersion"
+    implementation "org.mapstruct:mapstruct:$mapStructVersion"
+    implementation "org.projectlombok:lombok-mapstruct-binding:$lombokMapstructBindingVersion"
+
+    runtimeOnly 'org.postgresql:postgresql'
 }
 
 checkstyle {
