--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,6 @@ java {
 
 ext {
     checkstyleToolVersion = '9.3'
-    flywayVersion = '8.4.4'
     mapStructVersion = '1.4.2.Final'
     lombokVersion = '1.18.22'
     lombokMapstructBindingVersion = '0.2.0'
@@ -36,9 +35,9 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation "org.flywaydb:flyway-core:$flywayVersion"
     implementation "org.mapstruct:mapstruct:$mapStructVersion"
     implementation "org.projectlombok:lombok-mapstruct-binding:$lombokMapstructBindingVersion"
+    implementation 'org.flywaydb:flyway-core'
 
     runtimeOnly 'org.postgresql:postgresql'
 }
