--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
-#Context path
+# Application
 server.port=8080
 server.servlet.context-path=/poc-1
 
 # Datasource
-spring.datasource.url=jdbc:postgresql://localhost:5431/poc-1
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.databasePlatform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
 # Logging
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=DEBUG
