--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=DEBUG
+
+# CSV
+users.csv.file.name=users.csv
